# EmulationStation

./: .gitignore  CMakeLists.txt
.github/workflows/: publish.yml
es-app/: CMakeLists.txt
es-app/src/: FileSorts.cpp  main.cpp
es-app/src/scrapers/: GamesDBScraper.cpp
es-app/src/views/gamelist/: BasicGameListView.cpp  GridGameListView.cpp  ISimpleGameListView.cpp  ISimpleGameListView.h
es-core/src/: AudioManager.cpp  AudioManager.h  HttpReq.cpp  InputConfig.cpp  InputManager.cpp  Settings.cpp  Sound.cpp  Util.cpp  Util.h
tests/: CMakeLists.txt  test_util.cpp
